[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/pixel_font_16.tres" type="DynamicFont" id=1]
[ext_resource path="res://main_menu/main_menu.gd" type="Script" id=2]
[ext_resource path="res://view_cards/view_cards.tscn" type="PackedScene" id=3]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -45.0
margin_right = 75.0
margin_bottom = -28.0
custom_fonts/font = ExtResource( 1 )
text = "JUDGE IN 60 SECONDS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -10.0
margin_right = 32.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 1 )
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewCardsButton" type="Button" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = 22.0
margin_right = 47.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 1 )
text = "VIEW CARDS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewCards" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="Background/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Background/ViewCardsButton" to="." method="_on_ViewCardsButton_pressed"]
